# openai-realtime

./: Cargo.toml  README.md
examples/: two_agents.rs
src/: agent.rs  config.rs  error.rs  event.rs  lib.rs  session.rs  websocket.rs
src/api/: mod.rs  model.rs  response.rs  session.rs  voice.rs
